# taskpaper

./: .travis.yml  Cargo.toml  Cross.toml  watcher.lua
.github/workflows/: deploy.yml  main.yml
benches/: benchmarks.rs
ci/: before_deploy.sh  build.bash  install.sh  script.sh  test.bash
docker/: armv7-unknown-linux-gnueabihf-x11.docker  i686-unknown-linux-musl-x11.docker  x86_64-unknown-linux-musl-x11.docker
src/: db.rs  lib.rs  search.rs  tag.rs  testing.rs
src/tests/log_done/: taskpaperrc  todo_out.taskpaper
src/tests/mirror_changes/: destination_golden.taskpaper  source.taskpaper
taskpaper/: Cargo.toml
taskpaper/src/: db.rs  lib.rs  search.rs  tag.rs  testing.rs
taskpaper/src/tests/: simple_project.taskpaper  simple_project_canonical_formatting.taskpaper  simple_project_no_formatting.taskpaper  simple_project_no_formatting_what_we_really_do_though.taskpaper
taskpaper/src/tests/mirror_changes/: destination.taskpaper  source.taskpaper
taskpaper/src/tests/test_reformatting_indent_bug/: excepted.taskpaper  input.taskpaper
taskpaper_cli/: Cargo.toml
taskpaper_cli/src/: check_feeds.rs  dump_reading_list.rs  extract_checkout.rs  extract_timeline.rs  filter.rs  format.rs  housekeeping.rs  log_done.rs  main.rs  merge_timelines.rs  purge_tags.rs  search.rs  tickle.rs  to_inbox.rs
taskpaper_cli/src/tests/log_done/: .config.toml  logbook_out.taskpaper  taskpaperrc  tickle_out.taskpaper  todo_in.taskpaper
