[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "taskpaper"
version = "0.13.2"

[dependencies]
base64 = "0.9.3"
dirs = "1.0.4"
lazy_static = "1.2.0"
path-absolutize = "1.1.1"
regex = "1.0.6"
reqwest = "0.9.5"
rprompt = "1.0.3"
self_update = "0.4.3"
serde = "1.0.80"
serde_derive = "1.0.0"
shellexpand = "1.0.0"
soup = "0.3.0"
structopt = "0.2.12"
tempdir = "0.3.7"
textwrap = "0.10.0"
toml = "0.4.8"
walkdir = "2.2.5"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.sha1]
features = ["std"]
version = "0.6.0"

[dev-dependencies]
pretty_assertions = "0.5.1"

[target]

[target."cfg(target_os = \"macos\")"]

[target."cfg(target_os = \"macos\")".dependencies]
clipboard = "0.5.0"
osascript = "0.3.0"
plist = "0.3.0"
