[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "taskpaper"
version = "0.13.6"

[dependencies]
base64 = "0.9.3"
dirs = "1.0.4"
lazy_static = "1.2.0"
path-absolutize = "1.1.1"
regex = "1.0.6"
reqwest = "0.9.5"
rprompt = "1.0.3"
self_update = "0.4.3"
serde = { version = "1.0.102", features = [ "derive" ] }
shellexpand = "1.0.0"
soup = "0.3.0"
structopt = "0.2.12"
tempdir = "0.3.7"
textwrap = "0.10.0"
toml = "0.4.8"
walkdir = "2.2.5"
chrono = { version = "0.4.9", features = ["serde"] }
sha1 = { version = "0.6.0", features = ["std"] }

[dev-dependencies]
pretty_assertions = "0.5.1"

[target."cfg(target_os = \"macos\")".dependencies]
clipboard = "0.5.0"
osascript = "0.3.0"
plist = "0.3.0"
