[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "taskpaper"
version = "0.19.0"

[features]
# Enables some APIs that might be used to access internal information of the
# TaskpaperFiles, but are necessary for proper cross language data exchange.
bindings = []

[dependencies]
path-absolutize = "1.1.1"
serde = { version = "1.0.102", features = [ "derive" ] }
sha1 = { version = "0.6.0", features = ["std"] }
tempdir = "0.3.7"
thiserror = "1"
walkdir = "2.2.5"
