[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "taskpaper"
version = "0.26.3"

[features]
# Enables some APIs that might be used to access internal information of the
# TaskpaperFiles, but are necessary for proper cross language data exchange.
bindings = []

[dependencies]
log = "0.4.8"
path-absolutize = "3.0.10"
serde = { version = "1.0.102", features = [ "derive" ] }
sha1_smol = { version = "1.0.0", features = ["std"] }
tempdir = "0.3.7"
thiserror = "1"
toml = "0.5.5"
walkdir = "2.2.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
