[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "taskpaper_cli"
version = "0.18.5"

[[bin]]
name = "taskpaper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.11.0"
chrono = { version = "0.4.9", features = ["serde"] }
dirs = "2.0.2"
dtparse = "1.0.3"
futures = "0.3.0-alpha.19"
html2text = "0.1.8"
lazy_static = "1.2.0"
regex = "1.0.6"
reqwest = { version = "0.10.0-alpha.1", features = ["blocking"] }
rprompt = "1.0.3"
self_update = "0.7.0"
serde = { version = "1.0.102", features = [ "derive" ] }
shellexpand = "1.0.0"
soup = "0.4.1"
structopt = "0.3.3"
syndication = "0.5.0"
taskpaper = { path = "../taskpaper" }
textwrap = "0.11.0"
tokio = "0.2.0-alpha.6"
toml = "0.5.5"

[target."cfg(target_os = \"macos\")".dependencies]
clipboard = "0.5.0"
osascript = "0.3.0"
plist = "0.5.0"
