[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "taskpaper_cli"
version = "0.22.7"

[[bin]]
name = "taskpaper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
chrono = { version = "0.4.9", features = ["serde"] }
dirs = "4.0.0"
dtparse = "1.0.3"
futures = "0.3.0-alpha.19"
html2text = "0.4.2"
lazy_static = "1.2.0"
regex = "1.0.6"
reqwest = { version = "0.11.3", default-features = false, features = ["blocking", "rustls"] }
rprompt = "1.0.3"
self_update = { version = "0.30.0", default-features = false, features = ["rustls", "compression-flate2", "archive-tar"] }
serde = { version = "1.0.102", features = [ "derive" ] }
shellexpand = "2.1.0"
soup = "0.5.1"
structopt = "0.3.3"
syndication = "0.5.0"
taskpaper = { path = "../taskpaper" }
textwrap = "0.15.0"
tokio = "1.6"
toml = "0.5.5"

[target."cfg(target_os = \"macos\")".dependencies]
copypasta = "0.8.1"
osascript = "0.3.0"
